--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /* Basic Resume/CV Styling */
 
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
 
 body {
 
-  font-family: "Varela Round", sans-serif;
-  font-weight: 400;
+  font-family: "Merriweather", serif;
   font-style: normal;
 
   line-height: 1.6;
@@ -69,6 +68,7 @@ h2, h3, h4 {
   border-bottom: 2px solid #3498db;
   padding-bottom: 5px;
   margin-top: 30px;
+  font-family: "Merriweather Sans", sans-serif;
 }
 
 h4 small {
@@ -117,6 +117,7 @@ ul li {
   margin: 0 5px 5px 0;
   border-radius: 3px;
   font-size: 0.9em;
+  font-family: "Merriweather Sans", sans-serif;
 }
 
 .education .degree span,
